--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.2",
+    "axios": "^1.11.0",
     "core-js": "^3.26.1",
     "nuxt": "^2.16.3",
     "vue": "^2.7.14",
@@ -16,5 +19,13 @@
     "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^3.0.2",
+    "@types/node": "^24.1.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^10.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  }
 }
