--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
+    "@nuxtjs/netlify-files": "^1.2.0",
     "@types/node": "^24.1.0",
     "sass": "^1.89.2",
     "sass-loader": "^10.4.1",
