--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "vue": "^2.7.14",
     "vue-server-renderer": "^2.7.14",
     "vue-template-compiler": "^2.7.14",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
+    "webpack": "^4.46.0",
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/netlify-files": "^1.2.0",
@@ -28,5 +26,8 @@
     "sass-loader": "^10.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    
   }
 }
