--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.2",
+    "@nuxtjs/vercel-builder": "^0.25.0",
     "axios": "^1.11.0",
     "core-js": "^3.26.1",
     "nuxt": "^2.16.3",
     "vue": "^2.7.14",
     "vue-server-renderer": "^2.7.14",
     "vue-template-compiler": "^2.7.14",
-    "webpack": "^4.46.0",
+    "webpack": "^4.46.0"
+  },
+  "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
-    "@nuxtjs/netlify-files": "^1.2.0",
     "@types/node": "^24.1.0",
     "sass": "^1.89.2",
     "sass-loader": "^10.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    
   }
 }
